--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+
+
   <title> tamim's project</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  
+  <section class="top-banner">
+    <div class="half-width">
+      <h1>welcome to </h1>
+      <h2> <span class="color-orange">jhankar mahbub</span> World</h2>
+      <p>assalamu alaikum warahmatullah .i am jhankar mahbub.i am a professional web developer and youtuber. i live in
+        california .i am teacher of programming hero .complet web development with jhankar mahbub</p>
+        <a class="hire" href="http://www.facebook.com">HIRE ME </a>
+    </div>
+    <div class="half-width"> <img src="jhankar.png" alt="">
+
+    </div>
+  </section>
 </body>
+
 </html>
