--- a/index.html
+++ b/index.html
@@ -21,10 +21,22 @@
       <h2> <span class="color-orange">jhankar mahbub</span> World</h2>
       <p>assalamu alaikum warahmatullah .i am jhankar mahbub.i am a professional web developer and youtuber. i live in
         california .i am teacher of programming hero .complet web development with jhankar mahbub</p>
-        <a class="hire" href="http://www.facebook.com">HIRE ME </a>
+      <a class="hire" href="http://www.facebook.com">HIRE ME </a>
     </div>
     <div class="half-width"> <img src="jhankar.png" alt="">
 
+    </div>
+  </section>
+  <section class="dream-big">
+    <div class="half-width">
+      <img src="my-bg.png" alt="">
+    </div>
+    <div class="half-width">
+      <h1>dream big </h1>
+      <h2>become a web developer</h2>
+      <p>assalamu alaikum warahmatullah i am tamim. i live in kishirganj at kuliarchar .i study in jamiya islamiya darul
+        ulum madaniya jatrabari dhaka 1204.</p>
+      <a class="hire" href="http://www.facebook.com"> DOWNLOAD RESUME</a>
     </div>
   </section>
 </body>
